syntax = "proto3";

package ServidorNomes;

message RegistroServico{
    string host = 1;
    int32 porta = 2;
    string servico = 3;
}

message Relatorio{
    string host = 1;
    int32 numero_conexoes_ativas = 2;
}

service Nomes{
    rpc Cadastrar(RegistroServico) returns (RegistroServico){}
}
